2003-12-16 Damien Sandras  <dsandras@seconix.com>

	* src/druid.cpp: Fixed compilation error before Kilian sees it!
	
2003-12-16 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest features and old forgotten features.
	
	* src/config.cpp, src/endpoint.cpp, src/endpoint.h, src/lid.cpp,
	src/lid.h: New API: the Lid thread is not created anymore using
	the device name in the gconf db, but using its first argument. 
	
	* src/sound_handling.cpp: Make the druid test work with
	Quicknet cards.
	
	* src/druid.cpp: Disable tests during calls.
	
2003-12-14 Kilian Krause <kk@verfaction.de>

	* src/codec_info.h: Fixed codec text for GSM 06.10 as proposed by
	Stefan Bruens <lurch@gmx.li>
	
2003-12-14 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Fixed bug reported by Kilian when no LID is used.
	
2003-12-14 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in, src/config.cpp, src/endpoint.cpp,
	src/endpoint.h, src/gnomemeeting.cpp, src/lid.cpp, src/lid.h,
	src/main_window.cpp, src/pref_window.cpp: Added back Quicknet support
	with the ability to select the type of output device.
	
2003-12-11 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp, src/lid.cpp, src/main_window.cpp, 
	src/main_window.h: Added alphabet to the dialpad. Useful for 
	directories like Asterisk. Code cleanups.
	
2003-12-10 Kilian Krause <kk@verfaction.de>
	* FAQ: added the direct URL on www.gnomemeeting.org (in case 
	www.gnomemeeting.org/faq isn't updated for some reason)
	* FEATURES: Updated the codecs list 

2003-12-09 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest features and old forgotten features.

	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in, src/common.h, src/config.cpp,
	src/connection.cpp, src/connection.h, src/druid.cpp, src/endpoint.cpp,
	src/endpoint.h, src/gnomemeeting.cpp, src/main_window.cpp, 
	src/pref_window.cpp: Added support for maximum bandwidth setting. The 