@@ -1,3 +1,8 @@
+2003-12-17 Kilian Krause <kk@verfaction.de>
+
+	* src/druid.cpp, src/gnomemeeting.cpp, src/vfakeio.h: adjusted to new
+	PWLib API names
+	
 2003-12-16 Damien Sandras  <dsandras@seconix.com>
 
 	* src/druid.cpp: Fixed compilation error before Kilian sees it!
